[project]
name = "cca-f"
version = "0.0.0"
description = "CCA Foundations project ladder — code only."
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "projects/p*"]
exclude = ["projects/s*", "projects/capstone"]

[tool.uv.sources]
ccakit = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.6", "httpx>=0.27"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = ["live: hits the real Anthropic API; deselected by default"]
testpaths = ["packages", "projects", "scripts"]

[tool.ruff.lint.isort]
known-first-party = ["ccakit"]
